fix: git update

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header class="header">
-        <div class="header-logo"><img src="/img/Aesthetic Galaxy Definition Quote Instagram Post (2).png" alt="" class="header-logo"></div>
+        <div class="header-logo"><img src="img/Aesthetic Galaxy Definition Quote Instagram Post (2).png" alt="" class="header-logo"></div>
         <nav class="header-nav">
             <ul>
                 <li><a href="">Sobre</a></li>
@@ -23,42 +23,42 @@
         <section class="cards-container">
 
             <article class="card">
-                <img src="/img/night1.jpg" alt="" class="size">
+                <img src="img/night1.jpg" alt="" class="size">
                 <p>Legenda</p>
             </article>
 
             <article class="card">
-                <img src="/img/night2.jpg" alt="" class="size">
+                <img src="img/night2.jpg" alt="" class="size">
                 <p>Legenda</p>
             </article>
 
             <article class="card">
-                <img src="/img/night3.jpg" alt="" class="size">
+                <img src="img/night3.jpg" alt="" class="size">
                 <p>Legenda</p>
             </article>
 
             <article class="card">
-                <img src="/img/night4.jpg" alt="" class="size">
+                <img src="img/night4.jpg" alt="" class="size">
                 <p>Legenda</p>
             </article>
 
             <article class="card">
-                <img src="/img/night5.jpg" alt="" class="size">
+                <img src="img/night5.jpg" alt="" class="size">
                 <p>Legenda</p>
             </article>
 
             <article class="card">
-                <img src="/img/night6.jpg" alt="" class="size">
+                <img src="img/night6.jpg" alt="" class="size">
                 <p>Legenda</p>
             </article>
 
             <article class="card">
-                <img src="/img/night7.jpg" alt="" class="size">
+                <img src="img/night7.jpg" alt="" class="size">
                 <p>Legenda</p>
             </article>
 
             <article class="card">
-                <img src="/img/night8.jpg" alt="" class="size">
+                <img src="img/night8.jpg" alt="" class="size">
                 <p>Legenda</p>
             </article>
 
