--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
         <div class="header-logo"><img src="img/Aesthetic Galaxy Definition Quote Instagram Post (2).png" alt="" class="header-logo"></div>
         <nav class="header-nav">
             <ul>
-                <li><a href="">Sobre</a></li>
-                <li><a href="">Produtos</a></li>
-                <li><a href="">Contato</a></li>
+                <li><a href="https://jabrasil.org.br/elasnatech23/">Sobre</a></li>
+                <li><a href="https://www.sogatinhos.com.br/">Produtos</a></li>
+                <li><a href="https://www.linkedin.com/in/priscillatrevizan/">Contato</a></li>
             </ul>
         </nav>
     </header>
