--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
 </head>
 <body>
     <header class="header">
-        <div class="header-logo"><img src="img/Aesthetic Galaxy Definition Quote Instagram Post (2).png" alt="" class="header-logo"></div>
+        <div class="header-logo">
+            <img src="img/Aesthetic Galaxy Definition Quote Instagram Post (2).png">
+        </div>
         <nav class="header-nav">
             <ul>
                 <li><a href="https://jabrasil.org.br/elasnatech23/">Sobre</a></li>
